# aether

./: .gitignore  CMakeLists.txt  xmake.lua
src/: main.cpp
src/engine/: engine.hpp
src/head/: particle.hpp
